<resources>
    <string name="app_name">Grupo3_app</string>

    <string name="error_communication">Error de comunicacion</string>

    /*General*/

    <string name="registro">Registrarse</string>
    <string name="login">Login</string>
    <string name="contraseña">Contraseña</string>
    <string name="contraseñav">Contraseña actual</string>
    <string name="contraseñan">Contraseña nueva</string>
    <string name="contraseñanr">Repite contraseña nueva </string>
    <string name="canciones">Canciones</string>
    <string name="favoritos">Favoritos</string>
    <string name="actualpass">Actualizar mi contraseña </string>

    /*Login*/

    <string name="titulo_login">LOGIN</string>
    <string name="recuerda">Recuerdame</string>
    <string name="acceder">Entrar</string>
    <string name="recibir_correo" translatable="false">Quiero recibir una contraseña nueva</string>

    /*Registro*/

    <string name="titulo_registro">REGISTRO</string>
    <string name="nombre">Nombre:</string>
    <string name="apellido1">Apellidos</string>
    <string name="correo">E-mail:</string>
    <string name="contraseña2">Repite la contraseña:</string>
    <string name="phone" translatable="false">Telefono</string>
    <string name="registrar">Registrar</string>

    /*CambioPass*/
    <string name="titulo_reset" translatable="false">Introduce tu correo para actualizar su email</string>
    <string name="pass_cambiada" translatable="false">Se ha enviado su contraseña por correo</string>
    <string name="btn_reset" translatable="false">Recibir contraseña nueva</string>
    <string name="btn_volver" translatable="false">Volver a login</string>

    /*Favoritas*/
    <string name="titulo_favs">TUS FAVORITAS</string>

    /*ItemMenu*/

    <string name="item1">Mi Perfil</string>
    <string name="item2">Opiniones</string>
    <string name="item3">Asignaturas</string>
    <string name="item4">Salir</string>

    /*Mis Datos Personales*/
    <string name="misDatos">Mis Datos Personales</string>
    <string name="uiDatos">Datos</string>
    <string name="uiDatosNombre">Nombre</string>
    <string name="uiDatosApellidos">Apellidos</string>
    <string name="uiDatosEmail">Email</string>
    <string name="uiDatosPassWord">Password</string>
    <string name="uiDatosPhone">Telefono</string>
    <string name="uiDatosLocation">Localidad</string>
    <string name="uiDatosPhoto">Foto</string>
    <string name="uiActualizar">Actualizar</string>
    <string name="uiActualizarPass">Actualizar Pass</string>


    /*Editar mis Datos Personales*/
    <string name="actualizarNombre">Nombre</string>
    <string name="actualizarapellidos">Apellidos</string>
    <string name="actualizarEmail" translatable="false">Email</string>
    <string name="actualizarPhone" translatable="false">Phone</string>
    <string name="actualizarLocaclidad" translatable="false">Localidad</string>
    <string name="botonGuardar" translatable="false">Guardar</string>


    <string name="boton_escribirComent" translatable="false">Ok</string>
    <string name="boton_CancelarescribirComent" translatable="false">Cancelar</string>

</resources>